--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^10.5.0",
     "eslint-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.4",
     "less": "^4.4.1",
     "less-loader": "^12.3.0",
     "mini-css-extract-plugin": "^2.9.4",
