--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "url-loader": "^4.1.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "axios": "^1.12.2",
+    "lodash": "^4.17.21"
   }
 }
